tests/ui/is_trans_compatible.stderr
error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
 --> tests/ui/is_trans_compatible.rs:8:39
  |
8 | pub struct BOption<'id, T>(Option<T>, Id<'id>); // this should work
  |                                       ^^^^^^^
  |
  = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
  = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
  = note: this struct contains `Id<'id>`, which contains private fields, and makes it not a breaking change to become non-zero-sized in the future.
note: the lint level is defined here
 --> tests/ui/is_trans_compatible.rs:3:9
  |
3 | #![deny(repr_transparent_external_private_fields)] // this should not trigger
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
